SONARIAC-985 Implement array and lambdaExpression (#817)